--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -1,7 +1,6 @@
 .detail-product-container {
   margin-top: 74px;
   min-height: calc(100vh - 74px);
-  background-color: aliceblue;
   grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
   display: grid;
 }
@@ -9,26 +8,79 @@
 .slider-images {
   width: 90%;
   height: 90%;
+  min-height: 500px;
   margin: auto;
-  background-color: antiquewhite;
   display: flex;
   align-items: last baseline;
   justify-content: center;
   overflow: hidden;
   position: relative;
+  background: lightgray 50%;
 }
 
-.back-image{
-    position: absolute;
-    top: 0;
-    left: 0;
+.back-image {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  padding: 10px;
+  background: white;
+  border-radius: 100%;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  z-index: 2;
+  cursor: pointer;
 }
-.next-image{
-    position: absolute;
-    top: 0;
-    right: 0;
+
+.next-image {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  padding: 10px;
+  background: white;
+  border-radius: 100%;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  z-index: 2;
+  cursor: pointer;
 }
 
 .slider-images img {
-    width: 100%;
+  height: 90%;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  transform: translateX(unset);
+  transition: transform 0.5s ease-in-out;
+}
+
+.slider-images-counter {
+  width: 90%;
+  margin: 0rem auto;
+  height: 15px;
+  position: absolute;
+  top: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.slider-images-count {
+  width: 88px;
+  height: 2px;
+  background-color: #faf3f3;
+  list-style: none;
+  transition: background 0.5s ease-out;
+}
+
+.slider-images-count-active {
+  background-color: #1f1c1c;
 }
