--- a/src/views/partials/init.ejs
+++ b/src/views/partials/init.ejs
@@ -4,3 +4,4 @@
 <link rel="stylesheet" href="/styles/global.css">
 <link rel="stylesheet" href="/styles/header.css">
 <link rel="stylesheet" href="/styles/footer.css">
+<script src="https://kit.fontawesome.com/0aeb7696ea.js" crossorigin="anonymous"></script>
