--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -29,25 +29,25 @@
             </section>
 
             <section class="detail-product-description">
-                <h2>Name</h2>
-                <p>Price</p>
+                <h2>JAСKET KLS</h2>
+                <p>€105</p>
                 <ul class="color-list">
-                    <li><a href>Red</a></li>
-                    <li><a href>Red</a></li>
-                    <li><a href>Red</a></li>
+                    <li><a href></a></li>
+                    <li><a href></a></li>
+                    <li><a href></a></li>
                 </ul>
                 <ul class="size-list">
-                    <li><a href>XS</a></li>
-                    <li><a href>S</a></li>
-                    <li><a href>M</a></li>
-                    <li><a href>L</a></li>
-                    <li><a href>XL</a></li>
+                    <li>XS</li>
+                    <li>S</li>
+                    <li>M</li>
+                    <li>L</li>
+                    <li>XL</li>
                 </ul>
                 <form action>
                     <button>Add to cart</button>
                 </form>
                 <section class="product-info">
-                    <h3>Product Info</h3>
+                    <h3>PRODUCT INFO</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Sapiente eaque nulla ullam nemo, quisquam debitis
                         delectus aspernatur praesentium ipsa aliquam possimus
