feat: Multer installation and configuration

--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -13,7 +13,8 @@
             <section class="form-create-section">
                 <section class="form-field-img">
                     <label for>Images</label>
-                    <input name="image" type="file" name id>
+                    <input name="image" type="file" id="imageInput">
+                    <img id="imagePreview" src="#" alt="Vista previa de la imagen" style="display: none; max-width: 100px; max-height: 100px;">
                 </section>
 
                 <section class="form-field-button">
