--- a/src/views/detail.ejs
+++ b/src/views/detail.ejs
@@ -4,6 +4,7 @@
     <head>
         <%- include('./partials/init') %>
         <link rel="stylesheet" href="/styles/detail.css">
+        <link rel="stylesheet" href="/styles/sliderCard.css">
     </head>
 
     <body>
