--- a/public/styles/create.css
+++ b/public/styles/create.css
@@ -1,17 +1,165 @@
 .form-create {
-  margin-top: 75px;
-  height: calc(100vh - 75px);
+  min-height: calc(100vh - 75px);
   width: 90%;
+  margin: 2rem auto;
+  margin-top: 75px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(45%, 1fr));
+  gap: 1rem;
+  align-items: center;
+}
+
+@media (max-width: 800px) {
+  .form-create {
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+  }
+}
+
+.form-field-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-create button[type="submit"] {
+  background: #56aa91;
+  color: white;
+  width: 75%;
+  padding: 12px 24px;
+  border: none;
+}
+
+.form-create button[type="reset"] {
+  background: #3c3737cc;
+  color: white;
+  width: 20%;
+  padding: 12px 24px;
+  border: none;
+}
+
+.form-field-img {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  position: relative;
+}
+
+.label-inputImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#imagePreview {
+  width: 100%;
+  height: 400px;
+  object-fit: contain;
+  background: #f1f1ef;
+}
+
+.form-create-section {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  min-height: 500px;
+  justify-content: space-between;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form-field input {
+  border: 1px solid #080b13;
+  background: #fff;
+  padding: 5px;
+  height: 40px;
+  outline: none;
+}
+
+.form-field-two {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 1rem;
+}
+
+.form-buttom-image {
+  border: 1px solid #a2a2a2;
+  color: white;
+  background: #000000;
+  padding: 5px;
+  height: 40px;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .input-color {
-  width: 30px;
-  height: 30px;
+  display: block;
+  width: 40px !important;
+  height: 40px !important;
+  outline: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  background: #878181;
+  border: none !important;
+  border-width: 0 !important;
+  border-radius: 0 !important;
+}
+
+#color-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.color-label img {
+  width: 40px;
+  height: 40px;
+}
+
+.form-field-color {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.form-field-color label {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #080b13;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.label-color-selected {
+  background-color: #080b13;
+  color: white;
+  transition: background 0.5s ease-in-out;
+}
+
+.form-field-color input {
+  display: none;
+}
+
+.form-field-textarea {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  height: 100%;
+}
+
+.form-field-textarea textarea {
+  height: 45%;
+  min-height: 100px;
+  width: 100%;
   outline: none;
-  padding: 0;
-  margin: 0;
-  background: #ffffff;
-  border: none;
-  border-width: 0;
-  border-radius: 0;
+  border: 1px solid #080b13;
+  padding: 5px;
 }
