feat: Form add cart in detail product

--- a/src/views/create.ejs
+++ b/src/views/create.ejs
@@ -22,7 +22,7 @@
                     </label>
                     
 
-                    <img id="imagePreview" src="/images/product_default.png" alt="Vista previa de la imagen">
+                    <img id="imagePreview" src="/images/products/product_default.png" alt="Vista previa de la imagen">
 
                 </section>
 
