--- a/public/styles/detail.css
+++ b/public/styles/detail.css
@@ -1,7 +1,7 @@
 .detail-product-container {
   margin-top: 74px;
   min-height: calc(100vh - 74px);
-  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   display: grid;
   align-items: center;
   justify-items: center;
@@ -16,7 +16,7 @@
   gap: 1rem;
 }
 
-.detail-product-description h2{
+.detail-product-description h2 {
   font-family: "bgap-bold";
   font-size: 28px;
   font-weight: 500;
@@ -28,7 +28,7 @@
   font-weight: 500;
 }
 
-.detail-product-description .color-list,
+.detail-product-description .form-field-color,
 .detail-product-description .size-list {
   width: 100%;
   list-style: none;
@@ -37,7 +37,7 @@
   margin: 0.5rem 0;
 }
 
-.detail-product-description .color-list li,
+.detail-product-description .form-field-color li,
 .detail-product-description .size-list li {
   width: 40px;
   height: 40px;
@@ -48,7 +48,7 @@
   justify-content: center;
 }
 
-.detail-product-description .color-list li {
+.detail-product-description .form-field-color li {
   background: #d46565;
 }
 
@@ -64,7 +64,7 @@
   justify-content: center;
   align-items: center;
   opacity: 0.5;
-  background:  rgba(60, 55, 55, 0.8);
+  background: rgba(60, 55, 55, 0.8);
   color: white;
   font-size: 20px;
   font-weight: 400;
@@ -78,13 +78,56 @@
 }
 
 .detail-product-description .product-info h3 {
-  color: rgb(0, 0, 0);;
+  color: rgb(0, 0, 0);
   font-size: 20px;
   font-weight: 400;
 }
 
 .detail-product-description .product-info p {
-  color: rgba(0, 0, 0, 0.8);;
+  color: rgba(0, 0, 0, 0.8);
   font-size: 20px;
   font-weight: 400;
+}
+
+.form-field {
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+
+.form-field label {
+  width: 40px;
+  height: 40px;
+  border: 1px solid #080b13;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.label-color-selected {
+  background-color: #080b13;
+  color: white;
+  transition: background 0.5s ease-in-out;
+}
+
+.form-field input {
+  display: none;
+}
+
+.form-field-color input {
+  display: none;
+}
+
+.form-field-color label {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#form-addCarrito {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
