--- a/public/styles/sliderCard.css
+++ b/public/styles/sliderCard.css
@@ -46,8 +46,9 @@
 }
 
 .slider-images img {
-  height: 90%;
+  height: 100%;
   width: 100%;
+  display: block;
   position: absolute;
   bottom: 0;
   transform: translateX(unset);
@@ -65,6 +66,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  z-index: 2;
 }
 
 .slider-images-count {
