--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -56,7 +56,12 @@
                             <p class="main-section-product-description-price">
                                 €<%= product.price %>
                             </p>
+                            
                             <a href="/product/detail/<%= product.id %>">
+                                Ver
+                            </a>
+
+                            <a href="/product/edit/<%= product.id %>">
                                 Ver
                             </a>
                         </section>
