--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -62,7 +62,7 @@
                             </a>
 
                             <a href="/product/edit/<%= product.id %>">
-                                Ver
+                                Edit
                             </a>
                         </section>
 
